packages/neos-ui/src/Containers/SecondaryToolbar/style.module.css
.secondaryToolbar {
    composes: secondaryToolbar from '../style.module.css';
    display: flex;
    justify-content: space-between;
    gap: 1rem;
    position: relative;
    top: unset;
    left: unset;
    width: 100%;
    height: 41px;
    background: var(--colors-ContrastDarkest);
    will-change: padding;
    border-bottom: 1px solid var(--colors-ContrastDark);
}
.secondaryToolbar--isFringeLeft {
    padding-left: 46px;
}
.secondaryToolbar--isFringeRight {
    padding-right: 46px;
}
.secondaryToolbar__leftHandedActions {
    display: flex;
}
.secondaryToolbar__rightHandedActions {
    margin-left: auto;
    display: flex;
}

.secondaryToolbar__previewBadge {
    position: absolute;
    left: 50%;
    bottom: -1px;
    display: flex;
    align-items: center;
    padding: var(--spacing-Quarter) var(--spacing-Half);

    transform: translateX(-50%);
    border-radius: 4px 4px 0 0;
    background-color: var(--colors-PrimaryBlue);

    color: var(--colors-ContrastBrightest);
    font-size: var(--fontSize-Base);
    white-space: nowrap;
}

.dimensionCategory__icon {
    margin-right: .5em;
}

